--- a/src/app/virtuelle-maschinen-dialog/virtuelle-maschinen-dialog.component.html
+++ b/src/app/virtuelle-maschinen-dialog/virtuelle-maschinen-dialog.component.html
@@ -1,14 +1,13 @@
-<h1 mat-dialog-title>Virtuelle Maschinen löschen</h1>
+<h1 mat-dialog-title> {{ 'vmsdialog.delete' | translate }} </h1>
 <hr class="whiteHr">
 <div mat-dialog-content>
-  <p>Möchten Sie die folgenden virtuellen Maschinen inklusive ihrer Versionen wirklich löschen?</p>
+  <p> {{ 'vmsdialog.question' | translate }} </p>
   <ul>
     <li *ngFor="let vm of this.data.vms">{{vm.imageName}}</li>
   </ul>
 </div>
 
 <div mat-dialog-actions class="mt-5" class="offset-7">
-  <button class="text-box success mb-3" [mat-dialog-close]="true"><i class="fa fa-check"></i><b> Ja</b></button>
-  <button class="text-box danger mb-3" [mat-dialog-close]="false"><i class="fa fa-times"></i><b> Nein</b></button>
+  <button class="text-box success mb-3" [mat-dialog-close]="true"><i class="fa fa-check"></i><b> {{ 'vmsdialog.yes' | translate }} </b></button>
+  <button class="text-box danger mb-3" [mat-dialog-close]="false"><i class="fa fa-times"></i><b> {{ 'vmsdialog.no' | translate }} </b></button>
 </div>
-
