corrected mistake for Vms

--- a/src/app/virtuelle-maschinen/virtuelle-maschinen.component.html
+++ b/src/app/virtuelle-maschinen/virtuelle-maschinen.component.html
@@ -2,17 +2,17 @@
   <div class="row">
     <div class="col-12">
       <h4>
-        Übersicht virtuelle Maschinen
+        {{ 'vms.overview' | translate }}
       </h4>
       <p>
-        Hier können Sie virtuelle Maschinen hochladen, herunterladen, bearbeiten und l&ouml;schen.
+        {{ 'vms.overviewdescription' | translate }}
       </p>
     </div>
   </div>
   <div class="row">
     <div class="col-12">
       <h4>
-        Suchen
+        {{ 'vms.search' | translate }}
       </h4>
     </div>
   </div>
@@ -24,15 +24,14 @@
         </div>
         <div class="col-12 col-md-5 col-xl-3 mt-3 mt-md-0">
           <select id="searchselect" class="form-control" disabled>
-            <option>Alle anzeigen</option>
+            <option>{{ 'vms.showall' | translate }}</option>
           </select>
         </div>
         <div class="col-12 col-md-2 col-xl-2 mt-3 mt-md-0">
-          <strong>Sichtbar: {{amountOfVms}}</strong>
+          <strong>{{ 'vms.visible' | translate }} {{amountOfVms}}</strong>
         </div>
         <div class="col-12 col-md-12 col-xl-2 text-right mt-3 mt-xl-0">
-          <a class="button text-box" routerLink="/vms/newvm"><i class="fa fa-plus-circle"></i><b>&nbsp;Neue
-            VM</b></a>
+          <a class="button text-box" routerLink="/vms/newvm"><i class="fa fa-plus-circle"></i><b>&nbsp;{{ 'vms.newvm' | translate }}</b></a>
         </div>
       </div>
     </div>
@@ -40,7 +39,7 @@
   <div class="row">
     <div class="col-12 text-right">
       <a class="deletebutton text-box"(click)="deleteVm()">
-        <i class="fa fa-trash"></i><b> VM löschen</b>
+        <i class="fa fa-trash"></i><b> {{ 'vms.delete' | translate }} </b>
       </a>
     </div>
   </div>
@@ -66,7 +65,7 @@
 
       <!-- Name Column -->
       <ng-container matColumnDef="name">
-        <mat-header-cell *matHeaderCellDef> Name </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> {{ 'vms.name' | translate }} </mat-header-cell>
         <mat-cell class="mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.imageName}}</mat-cell>
       </ng-container>
 
@@ -78,37 +77,37 @@
 
       <!-- Besitzer Column -->
       <ng-container matColumnDef="besitzer">
-        <mat-header-cell *matHeaderCellDef> Besitzer </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> {{ 'vms.owner' | translate }} </mat-header-cell>
         <mat-cell class="mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.ownerId}}</mat-cell>
       </ng-container>
 
       <!-- Geändert Column -->
       <ng-container matColumnDef="geaendert">
-        <mat-header-cell *matHeaderCellDef> Geändert </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> {{ 'vms.changed' | translate }} </mat-header-cell>
         <mat-cell class="mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.updateTime}}</mat-cell>
       </ng-container>
 
       <!-- Ablaufdatum Column -->
       <ng-container matColumnDef="ablaufdatum">
-        <mat-header-cell *matHeaderCellDef> Ablaufdatum </mat-header-cell>
+        <mat-header-cell *matHeaderCellDef> {{ 'vms.expiration' | translate }} </mat-header-cell>
         <mat-cell class="mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.expireTime}}</mat-cell>
       </ng-container>
 
       <!-- Größe Column -->
       <ng-container matColumnDef="groesse">
-        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> Größe </mat-header-cell>
+        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> {{ 'vms.size' | translate }} </mat-header-cell>
         <mat-cell class="kleineSpalte mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.fileSize}}</mat-cell>
       </ng-container>
 
       <!--Verwendbar Column-->
       <ng-container matColumnDef="verwendbar">
-        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> Verwendbar </mat-header-cell>
+        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> {{ 'vms.usable' | translate }} </mat-header-cell>
         <mat-cell *matCellDef="let element" class="kleineSpalte mat-cell-list"[routerLink]="['/vms', element.imageBaseId]"><input type="checkbox" [checked]="element.isValid" disabled></mat-cell>
       </ng-container>
 
       <!--Vorlage Column-->
       <ng-container matColumnDef="vorlage">
-        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> Vorlage </mat-header-cell>
+        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> {{ 'vms.template' | translate }} </mat-header-cell>
         <mat-cell class="kleineSpalte mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]"><input type="checkbox" [checked]="element.isTemplate" disabled></mat-cell>
       </ng-container>
 
@@ -120,7 +119,7 @@
 
       <!-- Gesamtgröße Column -->
       <ng-container matColumnDef="gesamtgroesse">
-        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> Gesamtgröße </mat-header-cell>
+        <mat-header-cell class="kleineSpalte" *matHeaderCellDef> {{ 'vms.totalsize' | translate }} </mat-header-cell>
         <mat-cell class="kleineSpalte mat-cell-list" *matCellDef="let element" [routerLink]="['/vms', element.imageBaseId]">{{element.fileSizeSum}}</mat-cell>
       </ng-container>
 
